--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                 <button class="dropdown-btn">Legal Structures</button>
                 <div class="dropdown-content">
                     <a href="#" data-section="legal-structure-subtopic">Introduction</a>
+                    <a href="#" data-section="legal-structure-subtopic" data-anchor="sole-traders">Sole Traders</a>
+                    <a href="#" data-section="legal-structure-subtopic" data-anchor="partnerships">Partnerships</a>
+                    <a href="#" data-section="legal-structure-subtopic" data-anchor="private-limited-companies">Private Companies Ltd</a>
+                    <a href="#" data-section="legal-structure-subtopic" data-anchor="public-limited-companies">Public Companies Plc</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -63,6 +67,9 @@
                 <div class="sidebar-dropdown" id="legal-structure-dropdown">
                     <a href="#" data-section="legal-structure-subtopic">Introduction</a>
                     <a href="#" data-section="legal-structure-subtopic" data-anchor="sole-traders">Sole Traders</a>
+                    <a href="#" data-section="legal-structure-subtopic" data-anchor="partnerships">Partnerships</a>
+                    <a href="#" data-section="legal-structure-subtopic" data-anchor="private-limited-companies">Private Companies Ltd</a>
+                    <a href="#" data-section="legal-structure-subtopic" data-anchor="public-limited-companies">Public Companies Plc</a>
                 </div>
 
                 <button class="sidebar-btn" data-category="management">Management</button>
@@ -121,7 +128,7 @@
                     <p>Throughout this website, you'll notice that accounting topics - whether in management, financial, or taxation - are explained with reference to these business types. This gives each concept a practical footing and prepares you to apply your knowledge in the real world, whether you're sitting an exam, or advising a client.</p>
                 </div>
                 <div class="content-box">
-                    <h1 id="sole-traders">Sole Traders</h1>
+                    <h2 id="sole-traders">Sole Traders</h2>
                     <br>
                     <p>In the UK, a sole trader is the simplest and most common business structure, where the business is owned by one person. From a legal view, the business and the individual owning it, are a single entity (they are one in the same). This means that there are; <u>Legal and Accounting</u>, <u>Personal Liability</u>, <u>Financial Reporting Standards</u>, and <u>Taxation</u>, that are implicatied for the business owner personally (again, they are one, not separate).</p>
                     <br>
@@ -141,10 +148,34 @@
                     <br>
                     <h3>Financial Reporting Standards</h3>
                     <br>
-                    <p></p>
+                    <p>Sole Traders do not have any responsibilities as far as statutory reporting goes, at least as far as the law is concerned. However, they must document and report to HMRC a list of incomes and expenses generates within the financial year, along with file their taxes in their self-assessment. <span class="info-wrapper">
+                        <span class="info-button" onclick="toggleInfo('info3')">i</span>
+                    </span></p>
+                    <div id="info3" class="info-box">Incomes and Expenses that are documented, must also be kept for a minimum of 5-years from the date of self-assessment deadline. (i.e., for 25/26 (6th April - 5th April), the self-assessment deadline would be 31st January 2027 - so they should be kept until 31st January 2032).</div>
                     <br>
+                    <p>Despite their being no legal obligation besides incomes and expenses, it is best practice for Sole Traders to document their finances as any company would.</p>
+                    <br>
+                    <p>Doing so would better allow them to plan, budget for and prepare for the period/s ahead. It does not need to be as extensive as companies, but the better they are, the better prepared they will be.</p>
                     <br>
                     <h3>Taxation</h3>
+                    <br>
+                    <p></p>
+                    <br>
+                </div>
+                <div class="content-box">
+                    <h2 id="partnerships">Partnerships</h2>
+                    <br>
+                    <p></p>
+                    <br>
+                </div>
+                <div class="content-box">
+                    <h2 id="private-limited-companies">Private Limited Companies (Ltd)</h2>
+                    <br>
+                    <p></p>
+                    <br>
+                </div>
+                <div class="content-box">
+                    <h2 id="partnerships">Public Limited Companies (Plc)</h2>
                     <br>
                     <p></p>
                     <br>
