--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <br>
                 </div>
                 <div class="content-box">
-                    <h2 id="partnerships">Public Limited Companies (Plc)</h2>
+                    <h2 id="public-limited-companies">Public Limited Companies (Plc)</h2>
                     <br>
                     <p></p>
                     <br>
