--- a/index.html
+++ b/index.html
@@ -159,8 +159,91 @@
                     <br>
                     <h2>Taxation</h2>
                     <br>
-                    <p></p>
+                    <p>As we know, sole traders are taxed as individuals, and are subject to Income Tax and National Insurance Contributions, however, another key aspect of taxation for sole traders, would be their pension contributions too. Before we get to the rates of Income Tax, NI Contributions and Pensions – let's first explain how a pension would work for a sole trader.</p>
                     <br>
+                    <p>Pensions contributions are broken down into two main categories, Public and Private. A public pension would be tailored for those more situated within a civil servant role, for example, NHS, Government, Police, Ambulance Service, Fire Service etc. A sole trader would not find themselves to be within this category, however, this is still relevant in the case where the owner of a sole trader was previously within such roles. A private pension would be tailored for those more situated within a role that does not full under the purview of a civil servant, someone like a business owner.</p>
+                    <br>
+                    <p>If the owner of a sole trader has a public pension, contributions to such pot would be prevented – in other words, the account would be frozen preventing contributions to it. However, it will still rise due to inflation, and it will still become available upon retirement age. With the move from a civil servant position to being a business owner, the owner would opt for a private pension, where they can contribute to that. Upon hitting retirement age, the business owner would begin to receive both public and private contributions that they made as income.</p>
+                    <br>
+                    <p>Because the sole trader’s income is taxed as personal income, the question arises to whether taxable income is reduced by the contributions, and how HMRC view it. To simplify things, at the end of the financial year, the pension provider will notify the contributor with a summary, detailing their gross pension contributions (the amount in which they contributed, and tax-relief secured), this, along with taxable profits of the sole trader will be submitted to HMRC on/by the 31st January through a Self-Assessment. This is due the following year to the financial year the self-assessment pertains to.</p>
+                    <br>
+                    <p>As for contributions to the pension pot, there are limitation to the amount contributed, and implications in going over them. You can find this below, along with rates etc.</p>
+                    <br>
+                    <p><b>Income Tax 24/25 (Scotland)</b></p>
+                    <br>
+                    <table>
+                        <thead>
+                          <tr>
+                            <th>Tax Band</th>
+                            <th>Income Range</th>
+                            <th>Tax Rate</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>Personal Allowance</td>
+                            <td>£0 - £12,570</td>
+                            <td>0% (Tax-Free)</td>
+                          </tr>
+                          <tr>
+                            <td>Starter Rate</td>
+                            <td>£12,571 – £15,397</td>
+                            <td>19%</td>
+                          </tr>
+                          <tr>
+                            <td>Basic Rate</td>
+                            <td>£15,398 - £27,491</td>
+                            <td>20%</td>
+                          </tr>
+                          <tr>
+                            <td>Intermediate Rate</td>
+                            <td>£27,492 - £43,662</td>
+                            <td>21%</td>
+                          </tr>
+                          <tr>
+                            <td>Higher Rate</td>
+                            <td>£43,663 - £75,000</td>
+                            <td>42%</td>
+                          </tr>
+                          <tr>
+                            <td>Advanced Rate</td>
+                            <td>£75,001 - £125,140</td>
+                            <td>45%</td>
+                          </tr>
+                          <tr>
+                            <td>Top Rate</td>
+                            <td>£125,140 +</td>
+                            <td>48%</td>
+                          </tr>
+                        </tbody>
+                    </table>
+                    <br>
+                    <p><b>National Insurance Contributions 24/25</b></p>
+                    <br>
+                    <p>For National Insurance, there are: <u>Class 2</u> and <u>Class 4</u>:</p>
+                    <br>
+                    <p><b>Class 2</b></p>
+                    <br>
+                    <ul>
+                        <li>£3.45/pw on Taxable Profits of £6,725 + (PA).</li>
+                    </ul>
+                    <br>
+                    <p><b>Class 4</b></p>
+                    <br>
+                    <ul>
+                        <li>6% on Taxable Profits between Personal Allowance to £50,270 (PA).</li>
+                        <li>2% on Taxable Profits £50,270 + (PA).</li>
+                    </ul>
+                    <br>
+                    <p>I.e., if you have taxable profits above £6,725 - you pay £3.45 per week. If taxable profits are between £12,570 and £50,270 - you pay £3.25 per week + 6%. And lastly, if taxable profits are above £50,270 - you pay £3.45 per week + 8% (6%+2%).</p>
+                    <br>
+                    <p><b>Pension Contributions</b></p>
+                    <br>
+                    <p>Each tax year, there is a limited on the amount in which can be contributed to your pension pot, and still receive tax relief. This is called the <b>Annual Allowance</b>.</p>
+                    <br>
+                    <p>The standard annual allowance (24/25) is £60,000 - across all pension pots you may have. This limit also includes contributions made personally, or by your employer etc.</p>
+                    <br>
+                    <p></p>
                 </div>
                 <div class="content-box">
                     <h2 id="partnerships">Partnerships</h2>
