--- a/index.html
+++ b/index.html
@@ -736,10 +736,12 @@
                     <ul>
                         <li><b>Input Controls</b> - validations to prevent incorrect data entry (required fields, format checks).</li>
                         <li><b>Processing Controls</b> - ensuring correct processing of transactions (reconciliation, system calculations).</li>
-                        <li><b>Output Controls</b> - </li>
-                        <li><b>Integrity Checks</b> - </li>
-                        <li><b>Authorisation Controls</b> - </li>
+                        <li><b>Output Controls</b> - ensuring reports and financial statements are accurate and complete.</li>
+                        <li><b>Integrity Checks</b> - vertification of data accuracy across different systems (audit trails, cross-checking balances).</li>
+                        <li><b>Authorisation Controls</b> - ensuring only authorised personnel can approve transactions (manager approvals for payment).</li>
                     </ul>
+                    <br>
+                    <p>These controls focus on data accuracy and validity within a specific system rather then the IT environment as a whole.</p>
                 </div>
                 <div class="content-box">
                     <h1>3. Internal Controls</h1>
@@ -800,6 +802,6 @@
             </div>
         </div>
     </div>
-<script src="main.js"></script>
+<script src="main1.js"></script>
 </body>
 </html>
