--- a/index.html
+++ b/index.html
@@ -802,6 +802,6 @@
             </div>
         </div>
     </div>
-<script src="main1.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
