--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
                 <button class="sidebar-btn" data-category="auditing">Auditing</button>
                 <div class="sidebar-dropdown" id="auditing-dropdown">
                     <a href="#" data-section="auditing-subtopic">Introduction</a>
-                    <a href="#" data-section="auditing-subtopic">1. Legal and Professional Framework</a>
-                    <a href="#" data-section="auditing-subtopic">2. Issues Involed in Planning the Audit</a>
-                    <a href="#" data-section="auditing-subtopic">3. Internal Controls</a>
-                    <a href="#" data-section="auditing-subtopic">4. Analytical Review Procedures</a>
-                    <a href="#" data-section="auditing-subtopic">5. Substantive Audit Evidence</a>
-                    <a href="#" data-section="auditing-subtopic">6. Finalising the Audit</a>
+                    <a href="#" data-section="auditing-subtopic" data-anchor="legal-and-professional">1. Legal and Professional Framework</a>
+                    <a href="#" data-section="auditing-subtopic" data-anchor="issues-involved">2. Issues Involed in Planning the Audit</a>
+                    <a href="#" data-section="auditing-subtopic" data-anchor="internal-controls">3. Internal Controls</a>
+                    <a href="#" data-section="auditing-subtopic" data-anchor="analytical-review">4. Analytical Review Procedures</a>
+                    <a href="#" data-section="auditing-subtopic" data-anchor="substantive-audit">5. Substantive Audit Evidence</a>
+                    <a href="#" data-section="auditing-subtopic" data-anchor="finalising-audit">6. Finalising the Audit</a>
                 </div>
 
                 <button class="sidebar-btn" data-category="investments">Investments</button>
@@ -468,7 +468,7 @@
                     <p>This section is dedicated to Auditing.</p>
                 </div>
                 <div class="content-box">
-                    <h1>1. Legal & Professional Framework</h1>
+                    <h1 id="legal-and-professional">1. Legal & Professional Framework</h1>
                     <br>
                     <h2>Responsibilities and Rights of Auditors subject by Companies Act Legislation</h2>
                     <br>
@@ -541,7 +541,7 @@
                     <p>Shareholders may pass an ordinary resolution at any time to remove the auditor, regardless of their term in office. The auditor must be given notice and the opportunity to make written representations that must be sent to shareholders. This ensures that auditors can only be removed transparently and fairly, protecting their independence by allowing them to explain the circumstances to shareholders.</p>
                 </div>
                 <div class="content-box">
-                    <h1>2. Issues Involved in Planning the Audit</h1>
+                    <h1 id="issues-involved">2. Issues Involved in Planning the Audit</h1>
                     <br>
                     <h2>The Audit Year</h2>
                     <br>
@@ -733,6 +733,7 @@
                     <p><u><b>Application Controls</b></u></p>
                     <br>
                     <p>These are controls specific to individual software applications used in financial processing (accounting software, payroll systems, ERP systems). They help ensure accuracy, completeness, and validity of data within applications. For example:</p>
+                    <br>
                     <ul>
                         <li><b>Input Controls</b> - validations to prevent incorrect data entry (required fields, format checks).</li>
                         <li><b>Processing Controls</b> - ensuring correct processing of transactions (reconciliation, system calculations).</li>
@@ -744,22 +745,116 @@
                     <p>These controls focus on data accuracy and validity within a specific system rather then the IT environment as a whole.</p>
                 </div>
                 <div class="content-box">
-                    <h1>3. Internal Controls</h1>
+                    <h1 id="internal-controls">3. Internal Controls</h1>
+                    <br>
+                    <p>Internal controls ensure that when a business undertakes a transaction such as a sale, the final recording of the transaction on the accounts system reflects the true substance of the transactions. All this means is that internal controls help prevent fraud and errors which would make the accounting information incorrect.</p>
+                    <br>
+                    <hr>
+                    <br>
+                    <h2>Internal Control Systems</h2>
+                    <br>
+                    <p><b><u>Control Activities</u></b></p>
+                    <br>
+                    <p>This includes all procedures designed to ensure management directives are carried out:</p>
+                    <br>
+                    <ul>
+                        <li><b>Approval and Control of Documents:</b> documents should be approved by an appropriate person. For example, wages, calculations and payments should be approved by senior management.</li>
+                        <li><b>Control over IT</b> - passwords, usernames, backups and any other appropriate controls should be in place.</li>
+                        <li><b>Reconciliations</b> - key account balances such as bank and debtors should be reconciled on a regular basis.</li>
+                        <li><b>Arithmetical Accuracy</b> - items such as invoices should be checked to ensure they are arthmetically correct.</li>
+                        <li><b>Control Accounts</b> - control accounts for accounts such as wages, PAYE, VAT should be maintained.</li>
+                        <li><b>Restricted Access to Physical Assets</b> - only authorised staff should have access to certain areas of the business such as valuable or sensitive assets.</li>
+                        <li><b>Compare Physical counts with accounting records</b> - items such as cash and inventory should be counted periodically and compare to the amount in the accounting records.</li>
+                        <li><b>Segregation of Duties</b> - responsibilities should be divided to reduce the risk of fraud and error by employees.</li>
+                    </ul>
+                    <br>
+                    <p><u><b>Risk Assessment</b></u></p>
+                    <br>
+                    <p>The auditor should understand how management assesses risk and how they take action to mitigate risks discovered. And, management shoud be undertaking regular risk assessments to ensure that all risks are identified and mitigated.</p>
+                    <br>
+                    <p><u><b>Infotmation Systems</b></u></p>
+                    <br>
+                    <p>The auditor must obtain an understanding of the information system, including the related business processes, relevant to financial reporting. And, the auditor must decide what areas of the information system are relevant to the financial reporting of the entity and only concentrate on those systems.</p>
+                    <br>
+                    <p><b><u>Monitoring of Controls</u></b></p>
+                    <br>
+                    <p>Controls may be monitored either by management or by the internal audit function if one exists. The auditor may be able to rely on some of the work of internal audit as well, but must first gain an understanding on how controls are monitored and how effective the monitoring is.</p>
+                    <br>
+                    <p><b><u>Strong Control Environment</u></b></p>
+                    <br>
+                    <p>The control environment refers to the framework around which the controls of the organisation operate. Managements attitude will largely determine the nature of the control environment.</p>
+                    <br>
+                    <hr>
+                    <br>
+                    <h2>How Auditor's Record Systems</h2>
+                    <br>
+                    <p><b><u>Evaluating Internal Controls</u></b></p>
+                    <br>
+                    <ul>
+                        <li>The auditor needs to assess if the system is implemented correctly and is effective.</li>
+                        <li>So now the is documented it is time to see if: the controls are implemented and that the controls are effective, and to do this we use tests of controls.</li>
+                        <li>Tests of controls will be performed to test the effectiveness. The test concerns: how controls were applied, the consistency of the application, and who applied them.</li>
+                        <li>Typical tests include: walkthrough tests (follow a transaction through the system), observation (observe the stock count), computer aided auit techniques.</li>
+                    </ul>
+                    <br>
+                    <hr>
+                    <br>
+                    <h2>Limitations on Internal Controls</h2>
+                    <br>
+                    <p><b><u>Tests of Controls</u></b></p>
+                    <br>
+                    <ul>
+                        <li><b>Enquiry</b> - ask employees how they carry out certain transactions. Seek management's views by asking them if they feel the system of internal control is operating effectively. Ask whether at some point in the year, such as when people were on holidays or there were staff shortages, the system of internal control was known to have broken down. Ask management how internal control could be improved. You might be able to find some evidence of management's views by looking into board minutes or the minutes of departmental meetings (used in combination with other procedures).</li>
+                        <li><b>Inspection</b> - look at evidence of internal control procedures. For example, inspect the file of paid supplier invoices to see if they have indded been stamped or initiated to indicate that they have been paid.</li>
+                        <li><b>Observation</b> - watch employees as they carry out certain transactions and procedures. Of course, employees would be on their best behaviour if they knew they were being observed.</li>
+                        <li><b>Reperformance</b> - for example, reperform what the employees have done to make sure that they have done it correctly.</li>
+                    </ul>
+                    <br>
+                    <p><b><u>Computer System Controls</u></b></p>
+                    <br>
+                    <ul>
+                        <li>Application Controls and General Controls.</li>
+                        <li>Good IT system should have both applications and general IT controls.</li>
+                        <li>The auditor must be aware of the implications of the IT systems of the entity.</li>
+                        <li>Many transactions may now be automated and the automation must be checked and understood.</li>
+                        <li>Large volumes of transactions can now be performed by IT systems leading to greater focus on how the transactions are generated.</li>
+                    </ul>
+                    <br>
+                    <p><b><u>Application Controls</u></b></p>
+                    <br>
+                    <p>Application controls apply to the processing of transactions, examples are:</p>
+                    <br>
+                    <ul>
+                        <li>Batch Total Checks.</li>
+                        <li>Sequence Checks.</li>
+                        <li>Arithmetic Checks.</li>
+                        <li>Existence Checks.</li>
+                        <li>authorisation Checks.</li>
+                    </ul>
+                    <br>
+                    <p><b><u>General Controls</u></b></p>
+                    <br>
+                    <p>General IT controls ensure the information system can run properly, examples include:</p>
+                    <br>
+                    <ul>
+                        <li>Software System Acquisition Controls.</li>
+                        <li>Software Change and Maintenance Controls.</li>
+                        <li>Security Controls (passwords etc).</li>
+                        <li>Backup Controls.</li>
+                    </ul>
+                </div>
+                <div class="content-box">
+                    <h1 id="analytical-review">4. Analytical Review Procedures</h1>
                     <br>
                     <p></p>
                 </div>
                 <div class="content-box">
-                    <h1>4. Analytical Review Procedures</h1>
+                    <h1 id="substantive-audit">5. Substantive Audit Evidence</h1>
                     <br>
                     <p></p>
                 </div>
                 <div class="content-box">
-                    <h1>5. Substantive Audit Evidence</h1>
-                    <br>
-                    <p></p>
-                </div>
-                <div class="content-box">
-                    <h1>6. Finalising the Audit</h1>
+                    <h1 id="finalising-audit">6. Finalising the Audit</h1>
                     <br>
                     <p></p>
                 </div>
